--- a/index.html
+++ b/index.html
@@ -8,15 +8,15 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <link rel="stylesheet" href="./assets/css/reset.css">
   <link rel="stylesheet" href="./assets/css/styles.css">
-  <title>Document</title>
+  <title>Portfolio</title>
 </head>
 <body>
   <section class="container">
     <section class="perfil">
       <div class="perfil__profile">
         <img src="https://avatars.githubusercontent.com/u/3437338?v=4" alt="moça negra sorrindo" class="profile__avatar">
-        <p class="profile__nome">Daiane Martins Machado</p>
-        <p class="profile__descricao">Full Stack Developer</p>
+        <h1 class="profile__nome">Daiane Martins Machado</h1>
+        <h2 class="profile__descricao">Full Stack Developer</h2>
       </div>
       <div class="perfil__links">
         <ul class="links__lista-icones">
